<resources>
    <string name="app_name">BASICUI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_main_fragment">Hello Main Fragment</string>
    <string name="hello_second_fragment">Hello Second Fragment</string>
    <string name="toast">Fast Message</string>
    <string name="text_fragment_created">First Fragment Created</string>
    <string name="text_short_message">Short Message</string>
    <string name="text_alert">AlertDialog Created</string>
    <string name="action_like">Confirm</string>
    <string name="title_send_email">Email from Android App</string>
    <string name="text_no_email_client">No client email</string>
    <string name="home">Home</string>
    <string name="timePicker">Times</string>
    <string name="userForm">Forms</string>
    <string name="other">Others</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="title">Title</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="supporting_text">User description</string>
    <string name="favorite">Favorites</string>
</resources>